[SCM] update for selenium-windows slaves (Cygwin)
git-svn-id: http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/trunk@14362 5a2ea9fe-042b-0410-a2c6-acaeb210e01f

--- a/src/main/resources/hudson/plugins/sshslaves/Messages.properties
+++ b/src/main/resources/hudson/plugins/sshslaves/Messages.properties
@@ -29,3 +29,5 @@ SSHLauncher.RemoteUserEnvironment={0} [SSH] The remote user's environment is:
 SSHLauncher.StartingSCPClient={0} [SSH] SFTP failed. Copying via SCP.
 SSHLauncher.SlaveAlreadyRunning=There is already a slave process running ({0}).
 SSHLauncher.NoSlaveRunning={0} [SSH] There seems to be no slave process running.
+
+JDKInstaller.FailedToInstallJDK=Failed to install JDK. Exit code={0}
